--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
 }
 
 apply plugin: 'java'
+apply plugin: 'groovy'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
@@ -31,7 +32,15 @@ dependencies {
     testCompile("org.springframework.boot:spring-boot-starter-test")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("com.h2database:h2")
-    testCompile("junit:junit")
+    
+    //mandatory dependencies for using Spock
+    compile("org.codehaus.groovy:groovy-all:2.3.11")
+    testCompile("org.spockframework:spock-core:1.0-groovy-2.3")
+    //testCompile("junit:junit")
+	
+	// optional dependencies for using Spock
+	testRuntime "cglib:cglib-nodep:3.1"          // allows mocking of classes (in addition to interfaces)
+	testRuntime "org.objenesis:objenesis:2.1"    // allows mocking of classes without default constructor (together with CGLIB)
 }
 
 task wrapper(type: Wrapper) {
