--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator")
     testCompile("org.springframework.boot:spring-boot-starter-test")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
+	compile("postgresql:postgresql:9.0-801.jdbc4")
     compile("com.h2database:h2")
 	compile("org.assertj:assertj-core:1.0.0")
     
