--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,20 @@
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/spottr-server-dev
+spring.datasource.username=postgres
+spring.datasource.password=123456
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create-drop
+
+# Number of ms to wait before throwing an exception if no connection is available.
+spring.datasource.tomcat.max-wait=10000
+
+# Maximum number of active connections that can be allocated from this pool at the same time.
+#spring.datasource.tomcat.max-active=50
+
+# Validate the connection before borrowing it from the pool.
+spring.datasource.tomcat.test-on-borrow=true
