Adding heroku deploy configs

--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,10 @@ dependencies {
 	testRuntime "org.objenesis:objenesis:2.1"    // allows mocking of classes without default constructor (together with CGLIB)
 }
 
+task stage {
+	dependsOn build
+}
+
 task wrapper(type: Wrapper) {
     gradleVersion = '2.3'
 }
