Testing hardcoded heroku db configs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/spottr-server-dev
-spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.url=jdbc:postgresql://ec2-54-235-125-172.compute-1.amazonaws.com:5432/d32cn8k97tk1he
+spring.datasource.username=vcxftmdpqrsujz
+spring.datasource.password=RQsGw5RwY3WPrxMWsZLKnMQp3y
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
