Removing hardcoded DB configs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 
 
-spring.datasource.url=jdbc:postgresql://ec2-54-235-125-172.compute-1.amazonaws.com:5432/d32cn8k97tk1he
-spring.datasource.username=vcxftmdpqrsujz
-spring.datasource.password=RQsGw5RwY3WPrxMWsZLKnMQp3y
+spring.datasource.url=jdbc:postgresql://${HEROKU_DB_HOST}:${HEROKU_PORT}/${HEROKU_DB_NAME}
+spring.datasource.username=${HEROKU_DB_USERNAME}
+spring.datasource.password=${HEROKU_DB_PASSWORD}
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 # Number of ms to wait before throwing an exception if no connection is available.
 spring.datasource.tomcat.max-wait=10000
