--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
 
+group = 'com.spottr.ws'
+version = '0.1.0'
+
 jar {
     baseName = 'spottr-server'
     version =  '0.1.0'
