--- a/circle.yml
+++ b/circle.yml
@@ -1,10 +1,10 @@
 machine:
-  gradle:
-    version:
-      2.4.4
   java:
     version:
       oraclejdk8
+  pre:
+	- curl -s https://get.sdkman.io | bash
+	- sdk install gradle 2.14
 deployment:
    staging:
      branch: master
