--- a/circle.yml
+++ b/circle.yml
@@ -6,9 +6,11 @@ machine:
     - wget -P /home/ubuntu/ -N https://services.gradle.org/distributions/gradle-2.9-all.zip
     - unzip /home/ubuntu/gradle-2.9-all.zip -d /home/ubuntu/gradle
     - sudo ln -sfn gradle-2.9 /home/ubuntu/gradle/latest
-  environment:
-    GRADLE_HOME: /home/ubuntu/gradle/latest export
-    PATH: $PATH:$GRADLE_HOME/bin
+    - export GRADLE_HOME=/home/ubuntu/gradle/latest export
+    - export PATH=${PATH%:/usr/local/heroku/bin}
+    - export PATH=${PATH%/usr/local/gradle-1.10/bin:}
+    - export PATH=$PATH:$GRADLE_HOME/bin
+    - export PATH=$PATH:/usr/local/heroku/bin
 deployment:
    staging:
      branch: master
