--- a/circle.yml
+++ b/circle.yml
@@ -6,10 +6,12 @@ machine:
     - wget -P /home/ubuntu/ -N https://services.gradle.org/distributions/gradle-2.9-all.zip
     - unzip /home/ubuntu/gradle-2.9-all.zip -d /home/ubuntu/gradle
     - sudo ln -sfn gradle-2.9 /home/ubuntu/gradle/latest
-    - export PATH=${PATH%/usr/local/heroku/bin}
-    - export PATH=${PATH%/usr/local/gradle-1.10/bin}
-    - export PATH=$PATH:/home/ubuntu/gradle/latest/bin
-    - export PATH=$PATH:/usr/local/heroku/bin
+  environment:
+  	PATH: ${PATH%/usr/local/heroku/bin}
+  	PATH: ${PATH%/usr/local/gradle-1.10/bin}
+  	GRADLE_HOME: /home/ubuntu/gradle/latest
+  	PATH: $PATH:$GRADLE_HOME/bin
+  	PATH: $PATH:/usr/local/heroku/bin
 deployment:
    staging:
      branch: master
