Testing teh additional of explicit build and test commands

--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,11 @@ dependencies:
     - chmod +x setGradle.sh
     - chmod +x gradle.sh
     - ./setGradle.sh
+  override:
+    - /home/ubuntu/gradle/latest/bin/gradle dependencies
+test:
+  override:
+    - /home/ubuntu/gradle/latest/bin/gradle build
 deployment:
    staging:
      branch: master
