--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "mocha": "--check-leaks --full-trace src/*spec.js"
   },
   "scripts": {
+    "start": "babel-node src/index.js",
     "test": "npm run lint && npm run testonly",
     "testonly": "babel-node ./node_modules/.bin/_mocha $npm_package_options_mocha",
     "lint": "esw src --color --ignore-pattern node_modules; exit 0",
