Adding minimum requirements for node and npm

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "options": {
     "mocha": "--check-leaks --full-trace src/*spec.js"
   },
+  "engines" : {
+    "node" : ">5.0.0",
+    "npm": ">3.0.0"
+  },
   "scripts": {
     "start": "babel-node src/index.js",
     "test": "npm run lint && npm run testonly",
