--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "options": {
     "mocha": "--check-leaks --full-trace src/*spec.js"
   },
-  "engines" : {
-    "node" : ">5.0.0",
+  "engines": {
+    "node": ">5.0.0",
     "npm": ">3.0.0"
   },
   "scripts": {
@@ -44,6 +44,7 @@
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "^2.0.0",
     "eslint-watch": "^2.1.14",
-    "mocha": "^3.1.0"
+    "mocha": "^3.1.0",
+    "mysql": "^2.11.1"
   }
 }
