--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "mocha": "--check-leaks --full-trace src/*spec.js"
   },
   "engines": {
-    "node": ">5.0.0",
-    "npm": ">3.0.0"
+    "node": "6.3.1",
+    "npm": "3.10.3"
   },
   "scripts": {
     "start": "babel-node src/index.js",
