--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "npm": "3.10.3"
   },
   "scripts": {
-    "start": "babel-node src/index.js",
+    "start": "./node_modules/.bin/babel-node src/index.js",
     "test": "npm run lint && npm run testonly",
     "testonly": "babel-node ./node_modules/.bin/_mocha $npm_package_options_mocha",
     "lint": "esw src --color --ignore-pattern node_modules; exit 0",
