--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "./node_modules/.bin/babel-node src/index.js",
     "test": "npm run lint && npm run testonly",
-    "testonly": "babel-node ./node_modules/.bin/_mocha $npm_package_options_mocha",
+    "testonly": "./node_modules/.bin/babel-node ./node_modules/.bin/_mocha $npm_package_options_mocha",
     "lint": "esw src --color --ignore-pattern node_modules; exit 0",
     "lint:watch": "esw src --color --ignore-pattern node_modules --watch"
   },
@@ -22,6 +22,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.16.0",
     "babel-register": "^6.16.3",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
@@ -34,7 +35,6 @@
     "sequelize": "^3.24.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.16.0",
     "babel-core": "^6.17.0",
     "babel-eslint": "^7.0.0",
     "babel-preset-es2015": "^6.16.0",
