--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   "license": "ISC",
   "dependencies": {
     "babel-cli": "^6.16.0",
+    "babel-core": "^6.17.0",
+    "babel-eslint": "^7.0.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-node6": "^11.0.0",
     "babel-register": "^6.16.3",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
@@ -30,21 +34,17 @@
     "faker": "^3.1.0",
     "graphql": "^0.7.1",
     "lodash": "^4.16.4",
+    "mysql": "^2.11.1",
     "pg": "^6.1.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.24.3"
   },
   "devDependencies": {
-    "babel-core": "^6.17.0",
-    "babel-eslint": "^7.0.0",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-node6": "^11.0.0",
     "chai": "^3.5.0",
     "eslint": "^3.7.1",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "^2.0.0",
     "eslint-watch": "^2.1.14",
-    "mocha": "^3.1.0",
-    "mysql": "^2.11.1"
+    "mocha": "^3.1.0"
   }
 }
