Updating project license info and adding response headers to OPTIONS calls to support cross origin request for known domains.

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "lint:watch": "esw src --color --ignore-pattern node_modules --watch"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Charles",
+  "license": "UNLICENSED",
   "dependencies": {
     "babel-cli": "^6.16.0",
     "babel-core": "^6.17.0",
